tests-integration/fixtures/checking/1772823600_type_application_invalid_too_many/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms

Types
Bad :: ?[cannot apply function type]

Synonyms
type Bad = Array Int String

Diagnostics
error[InvalidTypeApplication]: Cannot apply type 'Array Int' to 'String'. 'Array Int' has kind 'Type', which is not a function kind.
  --> 3:12..3:28
  |
3 | type Bad = Array Int String
  |            ^~~~~~~~~~~~~~~~
error[CannotUnify]: Cannot unify 'Type' with '?[invalid kind]'
  --> 3:12..3:28
  |
3 | type Bad = Array Int String
  |            ^~~~~~~~~~~~~~~~
